<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/kamis_stuff_title">

    <Preference
        android:key="core_control"
        android:title="@string/core_control_title"
        android:summary="@string/core_control_summary"
        android:icon="@drawable/ic_cpu" />

    <Preference
        android:key="fast_charge"
        android:title="@string/fastcharge_title"
        android:summary="@string/fastcharge_summary"
        android:icon="@drawable/ic_fast_charge" />

    <Preference
    	android:key="performance"
    	android:title="@string/performance_mode_title"
    	android:summary="@string/performance_mode_summary"
    	android:icon="@drawable/ic_performance" />

    <Preference
        android:key="zram"
        android:title="@string/zram_size_title"
        android:summary="@string/zram_summary"
        android:icon="@drawable/ic_zram" />

    <Preference
        android:key="game_bar"
        android:title="@string/game_bar_title"
        android:summary="@string/game_bar_summary"
        android:icon="@drawable/ic_gamebar" />

</PreferenceScreen>
